fix: fixed modal z-index

--- a/src/entities/profile/ui/PostModal/PostModal.module.scss
+++ b/src/entities/profile/ui/PostModal/PostModal.module.scss
@@ -1,7 +1,6 @@
 .modal {
   width: 972px;
   height: 574px;
-  z-index: 200;
 
   border: 1px solid var(--color-dark-100);
 }
